--- a/src/stylesBg3.scss
+++ b/src/stylesBg3.scss
@@ -93,4 +93,8 @@
   .wordWas .words__letter{
     background-color: #5d397f;
   }
+
+  .menu__hint{
+    background-color: rgba(71, 25, 108, 0.9);
+  }
 }
