--- a/src/styles.css
+++ b/src/styles.css
@@ -419,7 +419,7 @@ html, body {
   align-items: center;
   width: 60px;
   height: 60px;
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(255, 255, 255, 0.75);
   border-radius: 50%;
   margin: 0 20px 26px 0;
   font-size: 2.9rem;
@@ -946,6 +946,9 @@ html, body {
   text-align: center;
   font-size: 1.5rem;
   color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .shop__cart__buy-button:hover {
@@ -1194,24 +1197,8 @@ html, body {
     font-size: 2.7rem;
   }
 }
-.black-friday {
-  color: black;
-}
-
-.red-friday {
-  color: #bb0000;
-  border-color: #bb0000;
-}
-
-.shop__cart__prices {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.last-price {
-  color: black;
+.shop__lastPrice {
+  color: red;
   position: relative;
   margin-right: 5px;
 }
@@ -1220,13 +1207,13 @@ html, body {
   margin-right: 4px;
 }
 
-.last-price:before {
+.shop__lastPrice:before {
   content: "";
   width: 0.8px;
   height: 90%;
   left: 40%;
   top: 1px;
-  background-color: black;
+  background-color: red;
   position: absolute;
   transform: rotate(120deg) translateX(-50%);
 }
@@ -1699,6 +1686,10 @@ b {
   border-radius: 10px;
 }
 
+.chosenBg-1 {
+  background-image: url(assets/settings/bg-1.png);
+}
+
 .chosenBg1 {
   background-image: url(assets/settings/bg1.png);
 }
@@ -1749,7 +1740,7 @@ b {
   font-size: 2.5rem;
   padding: 5px 10px;
   width: 135px;
-  margin: 8px auto;
+  margin: 10px auto;
   cursor: pointer;
 }
 
