--- a/src/stylesBg1.css
+++ b/src/stylesBg1.css
@@ -90,5 +90,8 @@
 .chosenAppBg1 .wordWas .words__letter {
   background-color: #bd550c;
 }
+.chosenAppBg1 .menu__hint {
+  background-color: rgba(109, 50, 8, 0.9);
+}
 
 /*# sourceMappingURL=stylesBg1.css.map */
