--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1535,7 +1535,6 @@ html,body
 }
 .word-definition{
   overflow: auto;
-  height: 80%;
   user-select: text;
 }
 .word-mean{
@@ -1767,3 +1766,10 @@ b{
   font-size: 2rem;
 }
 
+#definitionIframe{
+  width: 100%;
+  height: 100%;
+}
+.closedIframe{
+  display: none;
+}
