--- a/src/styles.scss
+++ b/src/styles.scss
@@ -614,6 +614,14 @@ html,body
   color: #f8f7f8;
   background-color: rgba(164, 104, 183, 0.9);
 }
+.menu__level .menu__hint{
+  bottom: -52px;
+  width: 250%;
+  text-align: center;
+}
+.menu__level:hover .menu__hint{
+  display: block;
+}
 .menu__button-next-level .menu__hint{
   bottom: -125px;
 }
@@ -1160,6 +1168,11 @@ html,body
   }
   .menu__words-amount, .menu__level{
     font-size: 2.6rem;
+  }
+  .menu__level .menu__hint{
+    bottom: -62px;
+    width: 250%;
+    font-size: 1.55rem;
   }
   .menu__hint{
     font-size: 1.4rem;
