Change words to star width

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -616,7 +616,7 @@ html,body
 }
 .menu__level .menu__hint{
   bottom: -52px;
-  width: 250%;
+  width: 300px;
   text-align: center;
 }
 .menu__level:hover .menu__hint{
@@ -1171,7 +1171,7 @@ html,body
   }
   .menu__level .menu__hint{
     bottom: -62px;
-    width: 250%;
+    width: 400px;
     font-size: 1.55rem;
   }
   .menu__hint{
