--- a/src/styles.css
+++ b/src/styles.css
@@ -595,7 +595,7 @@ html, body {
 
 .menu__level .menu__hint {
   bottom: -52px;
-  width: 250%;
+  width: 300px;
   text-align: center;
 }
 
@@ -1150,7 +1150,7 @@ html, body {
 
   .menu__level .menu__hint {
     bottom: -62px;
-    width: 250%;
+    width: 400px;
     font-size: 1.55rem;
   }
 
