--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1549,6 +1549,7 @@ html,body
 .word-definition{
   overflow: auto;
   user-select: text;
+  max-height: 100%;
 }
 .word-mean{
   overflow: hidden;
