--- a/src/styles.css
+++ b/src/styles.css
@@ -157,7 +157,7 @@ html, body {
 }
 
 .lastRang {
-  margin-bottom: 50px !important;
+  margin-bottom: 80px !important;
 }
 
 .leaderBoardInfo__playerInfo {
@@ -749,6 +749,13 @@ html, body {
   background-color: #BF63C7;
 }
 
+.action-block__letters .action-block__letter_notSelected {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .words__letter, .action-block__letter {
   display: flex;
   justify-content: center;
@@ -766,6 +773,7 @@ html, body {
   border-radius: 15%;
   background-color: white;
   color: #2C1345;
+  position: relative;
 }
 
 .tutorialSelected {
@@ -1771,6 +1779,14 @@ b {
 
 .closedIframe {
   display: none;
+}
+
+.showBigWordWas {
+  font-size: 20px;
+  height: 150px;
+  min-height: 150px;
+  width: 500px;
+  padding: 8px !important;
 }
 
 /*# sourceMappingURL=styles.css.map */
