--- a/src/stylesHalloween.scss
+++ b/src/stylesHalloween.scss
@@ -16,19 +16,19 @@
     color: #103A4D;
   }
   .leaderBoard{
-    background-image: url(assets/bgHalloween/leader.svg);
+    background-image: url(assets/bgNewYear/leader.svg);
   }
   .switchShop{
-    background-image: url(assets/bgHalloween/shop.svg);
+    background-image: url(assets/bgNewYear/shop.svg);
   }
   .words__letters-block_done .words__letter, .action-block__letters .action-block__letter_selected{
     background-color: #3C9BA8;
   }
   .menu__button-back{
-    background-image: url(assets/bgHalloween/home.svg);
+    background-image: url(assets/bgNewYear/home.svg);
   }
   .menu__tip{
-    background-image: url(assets/bgHalloween/tip.svg);
+    background-image: url(assets/bgNewYear/tip.svg);
   }
   .menu__tip_count, .rules__goBg{
     background-color: #103A4D;
@@ -40,13 +40,13 @@
     color: #103A4D;
   }
   .rules__cross{
-    background-image: url(assets/bgHalloween/cross.svg);
+    background-image: url(assets/bgNewYear/cross.svg);
   }
   .menu__button-next-level_active{
     background-image: url(assets/bgHalloween/arrow.svg);
   }
   .switchSettings{
-    background-image: url(assets/bgHalloween/settings.svg);
+    background-image: url(assets/bgNewYear/settings.svg);
   }
   ::-webkit-scrollbar-thumb {
     background-color: #3C9BA8;
@@ -74,13 +74,13 @@
 
   //Магазин
   .shop__cart__item_2{
-    background-image: url(assets/bgHalloween/cart1.svg);
+    background-image: url(assets/bgNewYear/cart1.svg);
   }
   .shop__cart__item_3{
-    background-image: url(assets/bgHalloween/cart2.svg);
+    background-image: url(assets/bgNewYear/cart2.svg);
   }
   .shop__cart__item_4{
-    background-image: url(assets/bgHalloween/cart3.svg);
+    background-image: url(assets/bgNewYear/cart3.svg);
   }
   .shop__cart__name{
     color: #103A4D;
