--- a/src/stylesBg1.scss
+++ b/src/stylesBg1.scss
@@ -97,5 +97,8 @@
   .menu__hint{
     background-color: rgba(109, 50, 8, 0.9);
   }
+  .leaderBoardInfo__player{
+    border-color: #bd550c;
+  }
 
 }
