--- a/src/stylesBg2.scss
+++ b/src/stylesBg2.scss
@@ -96,5 +96,7 @@
   .menu__hint{
     background-color: rgba(25, 43, 108, 0.9);
   }
-
+  .leaderBoardInfo__player{
+    border-color: #192B6C;
+  }
 }
