--- a/src/stylesBg3.scss
+++ b/src/stylesBg3.scss
@@ -97,4 +97,7 @@
   .menu__hint{
     background-color: rgba(71, 25, 108, 0.9);
   }
+  .leaderBoardInfo__player{
+    border-color: #5d397f;
+  }
 }
