--- a/src/styles.scss
+++ b/src/styles.scss
@@ -820,6 +820,7 @@ html,body
 .done-word{
   z-index: 10;
   position: relative;
+  text-shadow: 0 0 4px rgb(0, 0, 0);
 }
 .action-block__done-word{
   min-height: 30px;
@@ -1189,9 +1190,9 @@ html,body
   }
 
   .menu__button-next-level .menu__hint {
-    bottom: -70px;
-    left: -80px;
-    font-size: 1.3rem;
+    bottom: -85px;
+    left: -40px;
+    font-size: 1.55rem;
     width: 200px;
   }
 
@@ -1236,7 +1237,7 @@ html,body
     height: 62px;
   }
   .action-block__done-word{
-    font-size: 2.7rem;
+    font-size: 3rem;
   }
 }
 
@@ -1724,9 +1725,9 @@ b{
 
   border-radius: 10px;
 }
-//.chosenBg-2{
-//  background-image: url(assets/settings/bg-2.png);
-//}
+.chosenBg-2{
+  background-image: url(assets/settings/bg-2.png);
+}
 .chosenBg-1{
   background-image: url(assets/settings/bg-1.png);
 }
@@ -1784,7 +1785,7 @@ b{
   border-radius: 14px;
   font-size: 2.5rem;
   padding: 5px 10px;
-  width: 135px;
+  width: 185px;
   margin: 10px auto;
   cursor: pointer;
 }
@@ -1821,5 +1822,13 @@ b{
   }
   .levels__property{
     padding-top: 150px;
+  }
+}
+.levelClosedText{
+  font-size: 2rem;
+}
+@media (min-width: 1000px) {
+  .levelClosedText{
+    font-size: 2.2rem;
   }
 }
