--- a/src/stylesBg1.scss
+++ b/src/stylesBg1.scss
@@ -21,6 +21,12 @@
   .switchShop{
     background-image: url(assets/bg1/shop.svg);
   }
+  .switchShowLocation{
+    background-image: url(assets/bg1/locations.svg);
+  }
+  .newElement{
+    background-color: #6E3208;
+  }
   .words__letters-block_done .words__letter, .action-block__letters .action-block__letter_selected{
     background-color: #F69A5A;
   }
