--- a/src/stylesBg2.scss
+++ b/src/stylesBg2.scss
@@ -20,6 +20,12 @@
   .switchShop{
     background-image: url(assets/bg2/shop.svg);
   }
+  .switchShowLocation{
+    background-image: url(assets/bg2/locations.svg);
+  }
+  .newElement{
+    background-color: #4c83cb;
+  }
   .words__letters-block_done .words__letter, .action-block__letters .action-block__letter_selected{
     background-color: #6277C2;
   }
