--- a/src/stylesBg3.scss
+++ b/src/stylesBg3.scss
@@ -21,6 +21,12 @@
   .switchShop{
     background-image: url(assets/bg3/shop.svg);
   }
+  .switchShowLocation{
+    background-image: url(assets/bg3/locations.svg);
+  }
+  .newElement{
+    background-color: #47196C;
+  }
   .words__letters-block_done .words__letter, .action-block__letters .action-block__letter_selected{
     background-color: #A47BCD;
   }
