--- a/src/stylesNewYear.scss
+++ b/src/stylesNewYear.scss
@@ -21,6 +21,12 @@
   .switchShop{
     background-image: url(assets/bgNewYear/shop.svg);
   }
+  .switchShowLocation{
+    background-image: url(assets/bgNewYear/locations.svg);
+  }
+  .newElement{
+    background-color: #C21332;
+  }
   .words__letters-block_done .words__letter, .action-block__letters .action-block__letter_selected{
     background-color: #E75858;
   }
