--- a/src/stylesBg3.css
+++ b/src/stylesBg3.css
@@ -18,6 +18,12 @@
 .chosenAppBg3 .switchShop {
   background-image: url(assets/bg3/shop.svg);
 }
+.chosenAppBg3 .switchShowLocation {
+  background-image: url(assets/bg3/locations.svg);
+}
+.chosenAppBg3 .newElement {
+  background-color: #47196C;
+}
 .chosenAppBg3 .words__letters-block_done .words__letter, .chosenAppBg3 .action-block__letters .action-block__letter_selected {
   background-color: #A47BCD;
 }
