--- a/src/styles.css
+++ b/src/styles.css
@@ -530,7 +530,7 @@ html, body {
 .menu {
   position: absolute;
   left: 0;
-  top: 0;
+  top: 20px;
   width: 100%;
   padding: 5px 0;
   display: flex;
