Add new location - eightMarch

--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -1,6 +1,7 @@
 @import 'newYear';
 @import 'magicTales';
 @import 'animals';
+@import 'eightMarch';
 
 .locationOpened{
     overflow: auto !important;
